Update firebase rewrite for /ninja

--- a/firebase.json
+++ b/firebase.json
@@ -8,6 +8,10 @@
     ],
     "rewrites": [
       {
+        "source": "ninja",
+        "destination": "/ninja.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
