--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,10 @@
         "destination": "/ninja.html"
       },
       {
+        "source": "music",
+        "destination": "/music.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
