--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@lottiefiles/lottie-player": "^1.7.1"
+		"@lottiefiles/lottie-player": "^1.7.1",
+		"blurhash": "^2.0.5"
 	}
 }
